--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -63,8 +63,6 @@
     </div>
   </div>
   <div class='mainArea'>
-    <div class='spinnerBackground'></div>
-    <div class='spinner fixed'></div>
     <div id='sortIconArea' class='menuAdjust'>
       <div class="category categoryLineNoMenu"></div>
       <?tr("Sort By:");?>
@@ -78,7 +76,7 @@
       <input class='multi_install multi_installButton' type='button' value='<?tr("Install Selected Applications");?>' disabled>
       <input type='button' class='multi_installAll' value='<?tr("Select all on page");?>'>
       <input type='button' class='multi_installClear' value='<?tr("Clear");?>' disabled>
-      <input type='button' class='multi_deleteButton' value='<?tr("Delete");?>' disabled>
+      <input type='button' class='multi_deleteButton' value='<?tr("Delete");?>' style='display:none'>
     </div>
   </div>
 </div>
