--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -81,6 +81,8 @@
 <div id='alternateView'>
   <div class='caButton alternateViewClose'><?tr("CLOSE");?></div>
   <div class='alternateViewContent'></div>
+  <a href="#" class="move_to_end" title="<?=_('Move To End')?>"><i class="fa fa-arrow-circle-down"></i></a>
+<a href="#" class="back_to_top" title="<?=_('Back To Top')?>"><i class="fa fa-arrow-circle-up"></i></a>
 </div>
 <div class='ca_hide'>
   <div id='caCredits'>
@@ -107,6 +109,140 @@
       </div>
       <br>
       <div class='ca_center ca_italic'><?tr("Copyright");?> &copy; 2020-2025 Lime Technology, 2015-2025 Andrew Zawadzki</div>
+    </div>
+  </div>
+  <div id='caStatisticsTemplate'>    
+    <div class='ca_statistics' style="height:auto;overflow:scroll; overflow-x:scroll; overflow-y:hidden;margin:auto;width:fit-content;">
+      <div>
+        <table style='margin-top:1rem;'>
+          <tr style='height:6rem;'>
+            <td colspan='2'>
+              <div class='ca_center'>
+                <i class='fa fa-users' style='font-size:6rem;'></i>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td colspan='2'>
+              <div class='ca_center'>
+                <font size='5rem;'>Community Applications</font>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <?tr("Last Change To Application Feed");?>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='updateTime'></span><br><span data-stat-html='currentServer'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <?tr("Docker Applications");?>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='docker'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <?tr("Plugin Applications");?>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='plugin'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <?tr("Templates");?>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='totalApplications'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <?tr("Official Containers");?>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='official'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a onclick='event.stopPropagation();showModeration("Repository","<?tr("Repositories");?>");' style='cursor:pointer;' class='popUpLink'><?tr("Repositories");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='repositories'></span>
+            </td>
+          </tr>
+          <tr data-stat-row='private'>
+            <td class='ca_table'>
+              <a class='popUpLink' data-category='PRIVATE' onclick='showSpecialCategory(this);' style='cursor:pointer;'><?tr("Private Docker Applications");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='private'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Invalid","<?tr("Invalid Templates");?>");' style='cursor:pointer'><?tr("Invalid Templates");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='invalidXML'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Fixed","<?tr("Template Errors");?>");' style='cursor:pointer'><?tr("Template Errors");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='caFixed'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' data-category='BLACKLIST' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Blacklisted Apps");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='blacklist'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' data-category='INCOMPATIBLE' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Incompatible Applications");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='totalIncompatible'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' data-category='DEPRECATED' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Deprecated Applications");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='totalDeprecated'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Moderation","<?tr("Moderation Entries");?>");' style='cursor:pointer'><?tr("Moderation Entries");?></a>
+            </td>
+            <td class='ca_stat'>
+              <span data-stat-text='totalModeration'></span>
+            </td>
+          </tr>
+          <tr>
+            <td class='ca_table'>
+              <a class='popUpLink' data-stat-href='primaryServerUrl' target='_blank'><?tr("Primary Server");?></a> / <a class='popUpLink' data-stat-href='backupServerUrl' target='_blank'> <?tr("Backup Server");?></a>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class='ca_center'>
+        <a class='popUpLink' href='https://forums.unraid.net/topic/87144-ca-application-policies/' target='_blank'><?tr("Application Policy");?></a>
+      </div>
     </div>
   </div>
 </div>
