--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -22,8 +22,15 @@ $(function() {
   <? if ( $responsiveOS || ($display['theme'] == 'black' || $display['theme'] == 'white') ):?>
     $(".searchAreaHolder").insertAfter("#menu");
   <? endif; ?>
-  $(".sidebar").appendTo("body");
 
+  // Move the sidebar to the body so it fills the entire screen.
+  $(".sidebar").appendTo("body");
+  
+  // Add caDimmable to other elements outside of CA's DOM
+  // Elements within CA's DOM have the class within the HTML below
+
+  // Dimming happens when certain conditions are met within the main CA CSS file
+  $("#header, #menu,#footer,.upgrade_notice").addClass("caDimmable");
 });
 </script>
 
@@ -47,7 +54,7 @@ $(function() {
 </div>
 
 <!-- Main Display Area -->
-<div class='ca_display_area'>
+<div class='ca_display_area caDimmable'>
   <div class='mobileOverlay menuAdjust menuHidden' role='modal'><div class='mobileOverlayOutsideClick'></div></div>
   <div class='mobileMenu' id='mobileMenu'>
     <div class='menuItems menuAdjust'>
@@ -125,6 +132,12 @@ $(function() {
 
 <!-- Templates / HTML for alternate views -->
 <div class='ca_hide'>
+  <!-- Loading screen for the sidebar -->
+  <div id='sidebarLoading'>
+    <div class='ca_center caLogoIcon'></div>
+    <div class='ca_center ca_italic'><?tr("LOADING...")?></div>
+  </div>
+  <!-- Change log view -->
   <div id="caChangeLog">
     <div style='margin:auto;width:500px;'>
       <div class='ca_center caLogoIcon'></div>
@@ -134,6 +147,7 @@ $(function() {
       <div class="caChanges"></div>
     </div>
   </div>
+  <!-- Credits view -->
   <div id='caCredits'>
     <div class='credits'>
       <div class='ca_center caLogoIcon'></div>
@@ -160,6 +174,7 @@ $(function() {
       <div class='ca_center ca_italic'><?tr("Copyright");?> &copy; 2020-2025 Lime Technology, 2015-2025 Andrew Zawadzki</div>
     </div>
   </div>
+  <!-- Statistics view -->
   <div id='caStatisticsTemplate'>    
     <div class='ca_statistics' style="height:auto;overflow:scroll; overflow-x:scroll; overflow-y:hidden;margin:auto;width:fit-content;">
       <div>
@@ -220,7 +235,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a onclick='event.stopPropagation();showModeration("Repository","<?tr("Repositories");?>");' style='cursor:pointer;' class='popUpLink'><?tr("Repositories");?></a>
+              <a onclick='event.stopPropagation();showModeration("Repository","<?tr("Repositories");?>");' class='popUpLink'><?tr("Repositories");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='repositories'></span>
@@ -228,7 +243,7 @@ $(function() {
           </tr>
           <tr data-stat-row='private'>
             <td class='ca_table'>
-              <a class='popUpLink' data-category='PRIVATE' onclick='showSpecialCategory(this);' style='cursor:pointer;'><?tr("Private Docker Applications");?></a>
+              <a class='popUpLink' data-category='PRIVATE' onclick='showSpecialCategory(this);'><?tr("Private Docker Applications");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='private'></span>
@@ -236,7 +251,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Invalid","<?tr("Invalid Templates");?>");' style='cursor:pointer'><?tr("Invalid Templates");?></a>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Invalid","<?tr("Invalid Templates");?>");'><?tr("Invalid Templates");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='invalidXML'></span>
@@ -244,7 +259,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Fixed","<?tr("Template Errors");?>");' style='cursor:pointer'><?tr("Template Errors");?></a>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Fixed","<?tr("Template Errors");?>");'><?tr("Template Errors");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='caFixed'></span>
@@ -252,7 +267,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' data-category='BLACKLIST' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Blacklisted Apps");?></a>
+              <a class='popUpLink' data-category='BLACKLIST' onclick='showSpecialCategory(this);'><?tr("Blacklisted Apps");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='blacklist'></span>
@@ -260,7 +275,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' data-category='INCOMPATIBLE' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Incompatible Applications");?></a>
+              <a class='popUpLink' data-category='INCOMPATIBLE' onclick='showSpecialCategory(this);'><?tr("Incompatible Applications");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='totalIncompatible'></span>
@@ -268,7 +283,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' data-category='DEPRECATED' onclick='showSpecialCategory(this);' style='cursor:pointer'><?tr("Deprecated Applications");?></a>
+              <a class='popUpLink' data-category='DEPRECATED' onclick='showSpecialCategory(this);'><?tr("Deprecated Applications");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='totalDeprecated'></span>
@@ -276,7 +291,7 @@ $(function() {
           </tr>
           <tr>
             <td class='ca_table'>
-              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Moderation","<?tr("Moderation Entries");?>");' style='cursor:pointer'><?tr("Moderation Entries");?></a>
+              <a class='popUpLink' onclick='event.stopPropagation();showModeration("Moderation","<?tr("Moderation Entries");?>");'><?tr("Moderation Entries");?></a>
             </td>
             <td class='ca_stat'>
               <span data-stat-text='totalModeration'></span>
@@ -295,4 +310,7 @@ $(function() {
     </div>
   </div>
 </div>
+<!-- Debugging span 
+  Not currently used, but a span at bottom of page that can be used to display debugging information
+-->
 <span id='debugging'></span>
