--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -130,6 +130,12 @@ $(function() {
 <!-- Sidebar for the application description.   This gets moved to the body -->
 <div class='sidebar' role='modal'>
   <div class='sidebarClose'></div>
+  <div class='popupCloseArea'>
+    <div class='popupCloseAreaButtons'>
+      <span class='popUpClose caButton'><?tr("CLOSE");?></span>
+      <span class='popUpBack caButton'><?tr("BACK");?></span>
+    </div>
+  </div>
   <div class='sidenav sidenavHide'>
     <div id='sidenavContent'></div>
   </div>
@@ -162,22 +168,22 @@ $(function() {
       <div class='ca_center caLogoIcon'></div>
       <div class='ca_center ca_creditTitle'>Community Applications</div>
       <div class='ca_center ca_creditheader'><?tr("Development");?></div>
-      <div class='ca_center ca_credit'>Andrew Zawadzki</div>
+      <div class='ca_center ca_credit'>Andrew Zawadzki, Lime Technology Inc</div>
       <div class='ca_center ca_creditheader'><?tr("Additional Contributions");?></div>
       <div class='ca_center ca_credit'>bonienl, Lime Technology Inc</div>
       <div class='ca_center ca_creditheader'><?tr("GUI Layout Design");?></div>
-      <div class='ca_center ca_credit'>Magnus Engø</div>
+      <div class='ca_center ca_credit'>Magnus Engø, Andrew Zawadzki, Lime Technology Inc</div>
       <div class='ca_center ca_creditheader'><?tr("Application Feed");?></div>
       <div class='ca_center ca_credit'>Andrew Zawadzki, Kode, Lime Technology Inc</div>
       <div class='ca_center ca_creditheader'><?tr("Additional Testing");?></div>
-      <div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Lime Technology Inc, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy, dlandon</div>
+      <div class='ca_center ca_credit'>CHBMB, SpaceInvaderOne, Sparklyballs, wgstarks, DJoss, Zer0Nin3r, Mex, prostuff1, bonienl, ljm42, kizer, trurl, Jos, Lime Technology Inc, SimonF, ich777, jimmy898, Alex.b, neruve, Eugeni_CAT, ChaseCares, TheEyeTGuy, dlandon, Lime Technology Inc</div>
       <div class='ca_center ca_creditheader'><?tr("Additional Libraries");?></div>
       <div class='ca_center ca_credit'>
         <div>Awesomeplete (Lea Verou)</div>
         <div>Chart.js (various)</div>
         <div>chartjs-plugin-trendline (Marcus Alsterfjord)</div>
         <div>XML2Array/Array2XML (Miles Johnson)</div>
-        <div>Magnific-Popup (Dmytro Semenov)</div>
+        <div>Magnific-Popup (Dmytro Semenov) - Modified by Andrew Zawadzki</div>
       </div>
       <br>
       <div class='ca_center ca_italic'><?tr("Copyright");?> &copy; 2020-2025 Lime Technology, 2015-2025 Andrew Zawadzki</div>
