--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/skin.html
@@ -64,7 +64,7 @@ $(function() {
 
 <!-- Status Bar.   This gets moved to the body -->
 <div class='ca_statusArea'>
-  <span class='caDownloadProgress'></span>
+  <span class='caDownloadProgress ca_hide'></span>
   <span class='caStatusText'></span>
 </div>
 
